add API for students to view their job applications and status